2.3/yaml/deployment.nginx.multitool.netology.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-nginx-multitool
  namespace: netology-2
  labels:
    app: app-main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-main
  template:
    metadata:
      labels:
        app: app-main
    spec:
      containers:
      - name: nginx
        image: nginx:1.25.5
        volumeMounts:
          - name: nginx-index-file
            mountPath: /usr/share/nginx/html/
      - name: multitool
        image: wbitt/network-multitool
      volumes:
        - name: nginx-index-file
          configMap:
            name: configmap-nginx-multitool
