2.3/yaml/service.nginx.netology.yml
apiVersion: v1
kind: Service
metadata:
  name: service-nginx
  namespace: netology-2
spec:
  type: NodePort
  ports:
    - name: nginx-https
      port:  80
      nodePort: 30002
      protocol: TCP
      targetPort: 80
  selector:
    app: app-main
